Fixed stuck animation bug

--- a/components/layout/nav/Nav.module.css
+++ b/components/layout/nav/Nav.module.css
@@ -36,12 +36,12 @@
   opacity: 0;
   background-image: linear-gradient(
     135deg,
-    #46dcb4 0%,
-    #2ab1d9 50%,
-    #5469e0 100%
+    #2ab1d9 0%,
+    #5469e0 50%,
+    #46dcb4 100%
   );
   animation: aurora-gradient-secondary 15s infinite;
-  -webkit-animation: aurora-gradient-secondary 15s infinite;
+  /* -webkit-animation: aurora-gradient-secondary 15s infinite; */
 }
 
 #aurora::after {
@@ -56,7 +56,7 @@
     #5469e0 100%
   );
   animation: aurora-gradient 15s infinite;
-  -webkit-animation: aurora-gradient 15s infinite;
+  /* -webkit-animation: aurora-gradient 15s infinite; */
 }
 
 @keyframes aurora-gradient {
